# microbench

data/thread_bind_mem/: Calc.1.thd.numa0.log_rand.csv  Calc.1.thd.numa0.log_seq.csv  Calc.1.thd.numa1.log_rand.csv  Calc.1.thd.numa1.log_seq.csv  Calc.10.thd.numa0.log_seq.csv  Calc.10.thd.numa1.log_rand.csv  Calc.10.thd.numa1.log_seq.csv  Calc.11.thd.numa0.log_seq.csv  Calc.11.thd.numa1.log_rand.csv  Calc.11.thd.numa1.log_seq.csv  Calc.12.thd.numa0.log_rand.csv  Calc.12.thd.numa0.log_seq.csv  Calc.12.thd.numa1.log_rand.csv  Calc.12.thd.numa1.log_seq.csv  Calc.13.thd.numa0.log_seq.csv  Calc.13.thd.numa1.log_rand.csv  (+90 more)
script/: merge_diff_thd_bw.sh  mul_thd_bw_plot.plt  mul_thd_plot.sh  read2csv.sh  single_data_proc.sh  single_thd_bench.sh  single_thd_bw_plot.plt  single_thd_lat_plot.plt  single_thd_plot.sh  sort_data.sh  thread_bind_mem.sh  thread_compete_mem.sh
src/: CMakeLists.txt  main.cpp  multi_thread_numa_latency.cpp  multi_thread_wss_numa_latency.cpp  remote_numa_latency.cpp
src/thread_bind_mem/: 1_thd_256calc_numa1.txt  1_thd_64calc_numa1.txt
src/thread_compete_mem/: 1_thd_256ptr_nt-store_numa1_chrono.txt  1_thd_256ptr_numa1_chrono.txt  1_thd_numa0_chrono.txt  1_thd_numa1_chrono.txt  2_thd_256calc_numa1_chrono.txt  2_thd_256ptr_numa1_chrono.txt  2_thd_numa0_chrono.txt  2_thd_numa1_chrono.txt  4_thd_numa0_chrono.txt  4_thd_numa1_chrono.txt  8_thd_numa0_chrono.txt  8_thd_numa1_chrono.txt  numa0.txt  numa0_external_cyc_chrono.txt  numa0_external_cyc_cpucycles.txt  numa0_internal_cyc_chrono.txt  numa1.txt  numa1_external_cyc_chrono.txt  numa1_external_cyc_cpucycles.txt  numa1_internal_cyc_chrono.txt
util/: affinity.hpp  barrier.hpp  common.h
(+1092 files in other folders)
